--- a/.gitignore
+++ b/.gitignore
@@ -46,7 +46,8 @@ playground.xcworkspace
 # you should judge for yourself, the pros and cons are mentioned at:
 # https://guides.cocoapods.org/using/using-cocoapods.html#should-i-check-the-pods-directory-into-source-control
 #
-# Pods/
+Pods/
+example-2019-24a/server
 
 # Carthage
 #
